--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@ a {
 }
 
 .text-about {
-  padding: 60px 250px;
+  padding-top: 70px;
+  padding-left: 280px;
 }
 
 .text-about p {
-  width: 80%;
+  width: 70%;
   padding-bottom: 50px;
 }
 
@@ -126,14 +127,41 @@ a {
   height: 250px;
   width: 300px;
   border-radius: 20px;
+  border: 2px solid orange;
 }
 
 .team h1 {
   text-align: center;
 }
 
-form {
-  margin: 20px auto;
+.form {
+  text-align: center;
+}
+
+input {
+  margin: 10px 0;
+  padding: 10px 20px;
+  width: 50%;
+}
+
+textarea {
+  margin: 10px 0;
+  padding: 10px 20px;
+  width: 50%;
+  height: 200px;
+}
+
+button {
+  background-color: orange;
+  color: white;
+  padding: 10px 40px;
+  border-radius: 10px;
+}
+
+.contact {
+  background-image: url("images/shapes/Frame\ 57.jpg");
+  background-size: cover;
+  padding: 80px 0;
 }
 
 .contact h1 {
@@ -146,5 +174,4 @@ footer {
   padding: 100px 0;
   color: white;
   text-align: center;
-  margin-top: 100px;
 }
